# pixelator

./: README.md  pyproject.toml
pixelator/: game.py  game_master.py  game_message.py  message_handler.py  server.py
test/: test_game_messages.py
ui/pixelator/: index.html  package-lock.json  package.json  vite.config.ts
ui/pixelator/src/: App.tsx  main.tsx
ui/pixelator/src/components/board/: board.scss  board.tsx
ui/pixelator/src/components/canvas/: canvas.tsx
ui/pixelator/src/components/connectionIndicator/: connectionIndicator.tsx
ui/pixelator/src/components/grid/: grid.tsx
